--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -22,6 +22,37 @@
 </head>
 <body>
 
+<div th:fragment="popup">
+    <button id="add-transaction-button">Lägg till utgift</button>
+    <div id="add-transaction-popup" class="popup">
+        <div class="popup-content">
+            <span class="close-button">&times;</span>
+            <form id="transaction-form">
+                <!-- Input fields for transaction details -->
+                <!-- Example: -->
+                <input type="text" name="transaction-name" placeholder="Anteckning" required>
+                <input type="number" name="amount" placeholder="Summa" required>
+                <div class="form-group">
+                    <label for="group-dropdown">Grupper:</label>
+                    <select id="group-dropdown" class="form-group">
+                        <!-- Options will be dynamically populated -->
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label for="category-dropdown">Kategori:</label>
+                    <select id="category-dropdown" class="form-group">
+                        <!-- Options will be dynamically populated -->
+                    </select>
+                </div>
+                <input type="submit" value="Spara">
+            </form>
+        </div>
+    </div>
+    <!-- Scripts -->
+    <script th:src="@{/js/jquery.min.js}"></script>
+    <script th:src="@{/js/transactionButton.js}"></script>
+</div>
+
 <div th:fragment="menu">
     <div style="position: fixed; bottom: 0; width: 100%; background-color: #333; color: white; padding: 10px;">
         <nav>
