-Fixed id in popup-form. -Moved popup add transaction to layout.html instead. Created fragment "popup".

--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -27,21 +27,22 @@
     <div id="add-transaction-popup" class="popup">
         <div class="popup-content">
             <span class="close-button">&times;</span>
-            <form id="transaction-form">
-                <!-- Input fields for transaction details -->
-                <!-- Example: -->
-                <input type="text" name="transaction-name" placeholder="Anteckning" required>
-                <input type="number" name="amount" placeholder="Summa" required>
+            <form role="form" id="transaction-form" method="post">
+                <div class="form-group">
+                    <input type="text" id="description" name="description" placeholder="Anteckning" required>
+                </div>
+                <div class="form-group">
+                    <input type="number" id="amount" name="amount" placeholder="Summa" required>
+                </div>
+
                 <div class="form-group">
                     <label for="group-dropdown">Grupper:</label>
                     <select id="group-dropdown" class="form-group">
-                        <!-- Options will be dynamically populated -->
                     </select>
                 </div>
                 <div class="form-group">
                     <label for="category-dropdown">Kategori:</label>
                     <select id="category-dropdown" class="form-group">
-                        <!-- Options will be dynamically populated -->
                     </select>
                 </div>
                 <input type="submit" value="Spara">
