--- a/src/main/resources/static/css/test.css
+++ b/src/main/resources/static/css/test.css
@@ -7,6 +7,16 @@ body {
     height: 100vh;
 }
 
+.scrollable-column {
+    overflow-y: auto;
+    max-height: 100vh;
+}
+
+.custom-table {
+    background-color: rgba(255, 255, 255, 0.5);
+    border-radius: 10px !important;
+}
+
 .gjs-row {
     display: flex;
     justify-content: space-between;
@@ -30,7 +40,7 @@ body {
     background-position: left top;
     background-attachment: scroll;
     background-size: cover;
-    background-image: url(../images/test_copy.jpg);
+    background-image: url(../images/new.jpg);
 }
 
 @media (max-width: 768px) {
