--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -16,6 +16,9 @@
 		</div>
 		<div class="row justify-content-center">
 			<div class="col-md-6 col-lg-4">
+				<div th:if="${message}">
+					<div class="alert alert-success text-center" role="alert" th:text="${message}"></div>
+				</div>
 				<div class="login-wrap p-0">
 					<h3 class="mb-4 text-center">Redan registrerad?</h3>
 					<form th:action="@{/login}" method="post" class="signin-form">
