Gå med i grupp-knapp

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -8436,6 +8436,13 @@ body {
   z-index: 9999;
 }
 
+#add-group-button {
+  position: fixed;
+  top: 10px;
+  right: 10px;
+  z-index: 9999;
+}
+
 
 
 
