--- a/src/main/resources/templates/groups-list.html
+++ b/src/main/resources/templates/groups-list.html
@@ -40,5 +40,8 @@
 <div th:replace="~{layout.html :: scripts}">
 </div>
 
+<div th:replace="~{layout.html :: group-popup}">
+</div>
+
 </body>
 </html>
