--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -72,6 +72,76 @@
     <script th:src="@{/js/joinGroup.js}"></script>
 </div>
 
+<div th:fragment="removal-popup">
+    <div class="modal fade" id="confirmationModal" tabindex="-1" role="dialog" aria-labelledby="confirmationModalLabel"
+         aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="confirmationModalLabel">Bekräfta borttagning</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <p>Är du säker på att du vill ta bort?</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary" id="confirmationModalYesButton">Ja</button>
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Nej</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div th:fragment="removal-script">
+    <script th:inline="javascript">
+        $(document).ready(function() {
+
+            $(document).on("click", ".remove-icon", function(e) {
+                e.preventDefault();
+                var transactionId = $(this).attr("data-transactionId");
+                showConfirmationModal(transactionId);
+            });
+
+            function showConfirmationModal(transactionId) {
+                var confirmationModalYesButton = $("#confirmationModalYesButton");
+                confirmationModalYesButton.attr("data-transactionId", transactionId);
+                confirmationModalYesButton.click(function () {
+                    var transactionId = $(this).attr("data-transactionId");
+                    deleteTransaction(transactionId);
+                });
+                $("#confirmationModal").modal("show");
+            }
+
+            function deleteTransaction(transactionId) {
+                console.log("Received transactionId:", transactionId);
+
+                transactionId = parseInt(transactionId);
+                console.log("Parsed transactionId:", transactionId);
+
+                if (isNaN(transactionId)) {
+                    console.log("Invalid transactionId");
+                    return;
+                }
+
+                $.ajax({
+                    url: "/transactions/" + transactionId + "/remove",
+                    type: "POST",
+                    success: function(response) {
+                        console.log("Transaction deleted successfully");
+                        $("#confirmationModal").modal("hide");
+                        location.reload();
+                    },
+                    error: function() {
+                        console.log("Error deleting transaction");
+                    }
+                });
+            }
+        });
+    </script>
+</div>
 
 <div th:fragment="menu">
     <div style="position: fixed; bottom: 0; width: 100%; background-color: #333; color: white; padding: 10px;">
