-Added null-check for userDetail when trying to access /users or /groups when logged out. -Added fontawesome-icons to menu-links.

--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -147,9 +147,9 @@
     <div style="position: fixed; bottom: 0; width: 100%; background-color: #333; color: white; padding: 10px;">
         <nav>
             <ul style="display: flex; justify-content: center; align-items: center; margin: 0; padding: 0;">
-                <li style="list-style: none; margin-right: 20px;"><a th:href="@{'/users/transactions'}">Hem</a></li>
-                <li style="list-style: none; margin-right: 20px;"><a th:href="@{'/groups'}">Grupper</a></li>
-                <li style="list-style: none; margin-right: 20px;"><a th:href="@{'/logout'}">Logga ut</a></li>
+                <li style="list-style: none; margin-right: 20px;"><a th:href="@{'/users'}"><i class="fa fa-home"></i><span style="margin-left: 5px;">Hem</span></a></li>
+                <li style="list-style: none; margin-right: 20px;"><a th:href="@{'/groups'}"><i class="fa fa-users"></i><span style="margin-left: 5px;">Grupper</span></a></li>
+                <li style="list-style: none; margin-right: 20px;"><a th:href="@{'/logout'}"><i class="fa fa-sign-out"></i><span style="margin-left: 5px;">Logga ut</span></a></li>
             </ul>
         </nav>
     </div>
