--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/html">
 
 <head>
   <title>Spara och Para - Hem</title>
@@ -28,7 +28,7 @@
         <tr>
           <th>Beskrivning</th>
           <th>Belopp</th>
-          <th>Skapad</th>
+          <th><a href="#" id="sortLink" class="sort-link">Skapad <i class="fa fa-sort"></i></a></th>
         </tr>
         </thead>
         <tbody>
@@ -68,6 +68,9 @@
 </div>
 
 <div th:replace="~{layout.html :: popup}">
+</div>
+
+<div th:replace="~{layout.html :: sortByDate}">
 </div>
 
 <div th:replace="~{layout.html :: removal-script}">
