-Re-added menu icons.

--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -166,9 +166,9 @@
     <div style="position: fixed; bottom: 0; width: 100%; background-color: #333; color: white; padding: 10px;">
         <nav>
             <ul style="display: flex; justify-content: center; align-items: center; margin: 0; padding: 0;">
-                <li style="list-style: none; margin-right: 20px;"><a th:href="@{'/users'}">Hem</a></li>
-                <li style="list-style: none; margin-right: 20px;"><a th:href="@{'/groups'}">Grupper</a></li>
-                <li style="list-style: none; margin-right: 20px;"><a th:href="@{'/logout'}">Logga ut</a></li>
+                <li style="list-style: none; margin-right: 20px;"><a th:href="@{'/users'}"><i class="fa fa-home" style="margin-right: 5px;"></i>Hem</a></li>
+                <li style="list-style: none; margin-right: 20px;"><a th:href="@{'/groups'}"><i class="fa fa-users" style="margin-right: 5px;"></i>Grupper</a></li>
+                <li style="list-style: none; margin-right: 20px;"><a th:href="@{'/logout'}"><i class="fa fa-sign-out" style="margin-right: 5px;"></i>Logga ut</a></li>
             </ul>
         </nav>
     </div>
