-Changed trash can color to black

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -36,7 +36,7 @@
           <td>
             <a href="#" class="remove-icon" data-toggle="modal" data-target="#confirmationModal"
                data-transactionId="" th:attr="data-transactionId=${transaction.id}">
-              <i class="fa fa-trash"></i>
+              <i class="fa fa-trash" style="color: black"></i>
             </a>
             <span th:text="${transaction.description}"></span>
           </td>
