--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -8239,16 +8239,16 @@ h1, h2, h3, h4, h5,
       -o-transition: none;
       transition: none; } }
   .form-control::-webkit-input-placeholder {
-    /* Chrome/Opera/Safari */
+
     color: rgba(0, 0, 0, 0.8) !important; }
   .form-control::-moz-placeholder {
-    /* Firefox 19+ */
+
     color: rgba(0, 0, 0, 0.8) !important; }
   .form-control:-ms-input-placeholder {
-    /* IE 10+ */
+
     color: rgba(0, 0, 0, 0.8) !important; }
   .form-control:-moz-placeholder {
-    /* Firefox 18- */
+
     color: rgba(0, 0, 0, 0.8) !important; }
   .form-control:hover, .form-control:focus {
     background: transparent;
@@ -8275,7 +8275,7 @@ textarea.form-control {
   -ms-user-select: none;
   user-select: none; }
 
-/* Hide the browser's default checkbox */
+
 .checkbox-wrap input {
   position: absolute;
   opacity: 0;
@@ -8283,13 +8283,13 @@ textarea.form-control {
   height: 0;
   width: 0; }
 
-/* Create a custom checkbox */
+
 .checkmark {
   position: absolute;
   top: 0;
   left: 0; }
 
-/* Create the checkmark/indicator (hidden when not checked) */
+
 .checkmark:after {
   content: "\f0c8";
   font-family: "FontAwesome";
@@ -8306,14 +8306,14 @@ textarea.form-control {
       -o-transition: none;
       transition: none; } }
 
-/* Show the checkmark when checked */
+
 .checkbox-wrap input:checked ~ .checkmark:after {
   display: block;
   content: "\f14a";
   font-family: "FontAwesome";
   color: rgba(0, 0, 0, 0.2); }
 
-/* Style the checkmark/indicator */
+
 .checkbox-primary {
   color: #fbceb5; }
   .checkbox-primary input:checked ~ .checkmark:after {
@@ -8387,16 +8387,16 @@ body {
   box-shadow: none !important;
 }
 
-/* CSS for the pop-up */
+
 .popup {
-  display: none; /* Hide the pop-up by default */
+  display: none;
   position: fixed;
   z-index: 9999;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
 .popup-content {
@@ -8428,9 +8428,6 @@ body {
 
 
 
-/* Additional styling as per your needs */
-
-/* CSS for the button */
 #add-transaction-button {
   position: fixed;
   top: 10px;
